--- a/src/css/my-projects.css
+++ b/src/css/my-projects.css
@@ -119,6 +119,8 @@
   }
   .project-list .visit-btn {
     display: inline-flex;
+    fill: none;
+    stroke: var(--accet-green);
   }
 }
 @media screen and (min-width: 1280px) {
