--- a/src/css/work-together.css
+++ b/src/css/work-together.css
@@ -199,6 +199,8 @@
   flex-shrink: 0;
   width: 24px;
   height: 24px;
+  fill: none;
+  stroke: var(--accet-green);
 }
 @media screen and (min-width: 768px) {
   .address-list {
